deletion and creation of attribute definitions and options
minor stuff like ordering of scene attributes
minor style changes, hover animations, etc.
changed reload behavior of options dialog